--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script>
-    alert('Hello world from javascript')
+<script src="./bai2/bai2.js">
 </script>
 
 <body>
